--- a/experiment2/css/style.css
+++ b/experiment2/css/style.css
@@ -17,3 +17,10 @@ body {
     width: 100%;
     height: 600px;
 }
+
+.description-image {
+    max-width: 50%;
+    height: auto;
+    margin: 15px 0;
+    display: block;
+}
