--- a/experiment5/css/style.css
+++ b/experiment5/css/style.css
@@ -46,11 +46,6 @@ body {
   height: auto;
 }
 
-/* .results-bottom img {
-  width: 150px;
-  height: auto;
-} */
-
 .caption {
   text-align: center;
   font-size: 0.8em;
@@ -90,6 +85,10 @@ body {
     height: 300px;
     background-color: #f0f0f0;
     border: 1px solid #ddd;
+    overflow: hidden;     
+    display: flex;        
+    align-items: center;  
+    justify-content: center;
   }
   
   .evolution-stats {
